@@ -1,3 +1,12 @@
+2020-03-20  John Darrington <john@darrington.wattle.id.au>
+
+	* src/pk-misc.c (strings): Declare as const and deal
+	with consequences.
+	* src/pkl-asm.c (cast_table): Declare as const.
+	* src/pkl-asm.c (peek_table): Declare as const.
+	* src/pkl-asm.c (peekd_table): Declare as const.
+	* src/pkl-asm.c (print_table): Declare as const.
+
 2020-03-18  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* src/pkl-ast.c (pkl_ast_type_defval): Handle unbounded arrays.
